--- a/index.html
+++ b/index.html
@@ -204,42 +204,42 @@
                     <img src="assets/images/products_img/minecraft.png" class="card-img-top card-img-bottom" alt="Minecraft">
                     <div class="products_content">
                         <h2 class="my-0">Minecraft</h2>
-                        <span>&dollar;1.40 /GB</span>
+                        <span>&dollar;0.25 /GB</span>
                     </div>
                 </a>
                 <a href="ark-survival-evolved.html" class="card">
                     <img src="assets/images/products_img/ark.png" class="card-img-top card-img-bottom" alt="ARK">
                     <div class="products_content">
                         <h2 class="my-0">ARK: Survival Evolved</h2>
-                        <span>&dollar;0.50 /slot</span>
+                        <span>&dollar;Soon!</span>
                     </div>
                 </a>
                 <a href="rust.html" class="card">
                     <img src="assets/images/products_img/rust.png" class="card-img-top card-img-bottom" alt="RUST">
                     <div class="products_content">
                         <h2 class="my-0">RUST</h2>
-                        <span>&dollar;0.20 /slot</span>
+                        <span>&dollar;Soon!</span>
                     </div>
                 </a>
                 <a href="arma-3.html" class="card">
                     <img src="assets/images/products_img/arma.png" class="card-img-top card-img-bottom" alt="ARMA III">
                     <div class="products_content">
                         <h2 class="my-0">Arma III</h2>
-                        <span>&dollar;0.48 /slot</span>
+                        <span>&dollar;Soon!</span>
                     </div>
                 </a>
                 <a href="counter-strike-global-offensive.html" class="card">
                     <img src="assets/images/products_img/csgo.png" class="card-img-top card-img-bottom" alt="CS:GO">
                     <div class="products_content">
                         <h2 class="my-0">CS:GO</h2>
-                        <span>&dollar;0.50 /slot</span>
+                        <span>&dollar;Soon!</span>
                     </div>
                 </a>
                 <a href="dayz.html" class="card">
                     <img src="assets/images/products_img/dayz.png" class="card-img-top card-img-bottom" alt="DayZ">
                     <div class="products_content">
                         <h2 class="my-0">DayZ</h2>
-                        <span>&dollar;0.96 /slot</span>
+                        <span>&dollar;Soon!</span>
                     </div>
                 </a>
             </div>
