--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/images/logo.svg"/>
+    <link rel="shortcut icon" href="assets/images/logo.png"/>
 
     <!-- Bootstrap v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
