--- a/minecraft.html
+++ b/minecraft.html
@@ -157,7 +157,7 @@
                                 <div class="card-body">
                                     <h2 class="mb-4">Dirt Plan</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>&dollar;1.01 First Month</span>
+                                        <span>80₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">4GB</h3>
                                     <div class="row mb-4">
@@ -186,7 +186,7 @@
                                 <div class="card-body">
                                     <h2 class="mb-4">Coal Plan</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>&dollar;1.80 Month</span>
+                                        <span>160₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">8GB</h3>
                                     <div class="row mb-4">
@@ -215,7 +215,7 @@
                                 <div class="card-body">
                                     <h2 class="mb-4">Redstone Plan</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>&dollar; 2.71 Month</span>
+                                        <span>240₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">10GB</h3>
                                     <div class="row mb-4">
@@ -244,7 +244,7 @@
                                 <div class="card-body">
                                     <h2 class="mb-4">Gold</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>&dollar;3.61 Month</span>
+                                        <span>320₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">12GB</h3>
                                     <div class="row mb-4">
@@ -273,7 +273,7 @@
                                 <div class="card-body">
                                     <h2 class="mb-4">Diamond Plan</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>&dollar;4.51 Month</span>
+                                        <span>400₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">16GB</h3>
                                     <div class="row mb-4">
@@ -300,9 +300,9 @@
                         <div class="col-md-4">
                             <div class="card mb-4">
                                 <div class="card-body">
-                                    <h2 class="mb-4">Redstone</h2>
+                                    <h2 class="mb-4">Netherite Plan</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>&dollar;Netherite Month</span>
+                                        <span>80₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">34GB</h3>
                                     <div class="row mb-4">
@@ -366,7 +366,7 @@
                                 <div class="card-body">
                                     <h2 class="mb-4">Zombie Plan</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>&dollar;1.13 Month</span>
+                                        <span>100₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">2GB</h3>
                                     <div class="row mb-4">
@@ -395,7 +395,7 @@
                                 <div class="card-body">
                                     <h2 class="mb-4">Skeleton Plan</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>&dollar;2.26 Month</span>
+                                        <span>200₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">4GB</h3>
                                     <div class="row mb-4">
@@ -424,7 +424,7 @@
                                 <div class="card-body">
                                     <h2 class="mb-4">Creeper Plan</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>&dollar;3.38 Month</span>
+                                        <span>300₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">8GB</h3>
                                     <div class="row mb-4">
@@ -453,7 +453,7 @@
                                 <div class="card-body">
                                     <h2 class="mb-4">Enderman Plan</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>&dollar;4.51 Month</span>
+                                        <span>400₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">12GB</h3>
                                     <div class="row mb-4">
@@ -482,7 +482,7 @@
                                 <div class="card-body">
                                     <h2 class="mb-4">Husk Plan</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>&dollar;5.64 Month</span>
+                                        <span>500₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">24GB</h3>
                                     <div class="row mb-4">
@@ -511,7 +511,7 @@
                                 <div class="card-body">
                                     <h2 class="mb-4">Piglin Plan</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>&dollar;6.77 Month</span>
+                                        <span>600₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">48 gb</h3>
                                     <div class="row mb-4">
