--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -133,57 +133,188 @@
     <div class="legal py-5">
         <div class="container-fluid container-custom">
             <div class="legal_heading">
-                <span>A brief introduction</span>
+                <span>Terms Of Services</span>  <br><br>          
             </div>
-            <p>Welcome to our platform — a reliable and performance-driven solution designed to make server management simple and efficient. Whether you’re hosting games, applications, or enterprise projects, our tools provide everything you need to deploy, monitor, and scale with confidence.</p>
-            <p>We focus on delivering speed, security, and ease of use, so you can spend less time on technical complexity and more time growing your community or business.</p>
-            <br />
-            <div class="legal_heading">
-                <span>Refund Policy</span>
+            <span>1. Introduction</span>
+            <p>Welcome to SkilloraClouds ("we", "our", "us")! <br> These Terms apply to all users of our services and subdomains. <br> By creating an account or using SkilloraClouds, you accept these Terms in full.</p>
+            <span>2. Registration</span>
+            <p>1️⃣ You must register to access our services. <br>
+2️⃣ Provide a valid email, username, and secure password. <br>
+3️⃣ Additional details (like address or phone) may be required for certain products. <br>
+4️⃣ Keep your info accurate and updated. <br>
+5️⃣ Free hosting users: linking your SkilloraClouds account to Discord is recommended. 🤝</p>
+<span>3. Free Hosting</span>
+<p>✨ Available for users following our policies. <br>
+🚫 Do not use free hosting for illegal or harmful activities. <br>
+⚙️ Limited resources apply. <br>
+📢 Ads or promos may appear on free plans. <br>
+❗ We can suspend or terminate free accounts anytime if Terms are violated. <br>
+💾 SkilloraClouds isn’t responsible for data loss or downtime in free hosting.</p>
+<span>4. Paid Hosting</span>
+<p>
+💰 Covers web hosting, Minecraft hosting, VPS, and more. <br>
+💳 Pay fees in advance as per your billing cycle. <br>
+🔔 Price changes will be communicated beforehand. <br> <br>
+
+Your Responsibilities: <br>
+
+Keep account credentials safe 🔐 <br>
+
+Follow all applicable laws 📜 <br>
+
+Manage resources within your plan limits ⚙️ <br>
+
+Service Limitations: <br>
+
+100% uptime not guaranteed 🌐 <br>
+
+Overuse may lead to temporary limits 🚧 <br>
+
+Paid users get priority support 🎯 <br>
+</p>
+<span>5. Data Handling</span>
+<p>
+💾 We store your data securely. <br>
+🧱 Backups may be taken, but not guaranteed. <br>
+📁 Always keep your own backups! <br>
+⚡ SkilloraClouds isn’t liable for accidental data loss. <br>
+🛡️ Optional data protection available upon request. <br>
+</p>
+<span>6. Prohibited Activities</span>
+<p>
+Don’t use SkilloraClouds for: <br>
+
+Hosting viruses, malware, or illegal content ☠️ <br>
+
+Hacking, phishing, or security breaches 🧨 <br>
+
+Overloading servers or harming infrastructure 🔧 <br>
+</p>
+<span>7. Termination & Suspension</span>
+<p>We may suspend or terminate your service if:
+
+You violate these Terms ❌ <br>
+
+You exceed resource limits 📊 <br>
+
+Payments are overdue 💸 <br>
+
+Services are discontinued 🔄
+</p>
+<span>8. Refund Policy</span>
+<p>
+Refunds allowed within 24 hours of first payment ⏳ <br>
+
+VPS refunds are non-refundable ⚠️ <br>
+
+No refunds after 24 hours 🚫
+</p>
+<span>9. Limitation of Liability</span>
+<p>SkilloraClouds isn’t responsible for any losses, downtime, or damages from service use.
+Please use services responsibly. 🙏</p>
+<span>10. VPS Delivery</span>
+<p>High demand = possible delivery delays.
+Thank you for your patience 💨
+</p>
+<span>11. Technical Support</span>
+<p>We support SkilloraClouds-related issues only.
+We can’t assist with third-party mods, plugins, or scripts.</p>
+<span>12. Abuse Protocol</span>
+<p>Abuse reports must be handled within 24 hours 🕒 <br>
+
+Repeated or serious abuse = instant termination 🚫 <br>
+
+Charges may apply for delisting blacklisted IPs 💼 <br>
+</p>
+<span>13. Acknowledgment</span>
+<p>By using our services, you agree to these Terms + our Privacy and Acceptable Use Policies.
+Together, they form a legally binding agreement. ⚖️</p>
+<span>14. Service-Level Agreement (SLA)</span>
+<p>📈 We aim for 99.5% uptime on paid services. <br>
+💳 SLA credits apply only to eligible paid plans. <br>
+🚫 Excludes downtime from abuse or customer-side issues.</p>
+<span>15. Account Security</span>
+<p>Keep your credentials safe 🔐 <br>
+
+Report unauthorized access immediately 🚨 <br>
+
+We’re not responsible for compromised accounts.</p>
+<span>16. Content Ownership</span>
+<p>You fully own your hosted content, as long as: <br>
+
+It follows applicable laws 📜 <br>
+
+It’s not illegal, harmful, or copyrighted 🚫</p>
+<span>17. Fair Use Policy</span>
+<p>Excessive resource use may be limited. <br>
+
+Crypto mining or 24/7 background tasks not allowed 💣 <br>
+
+Fair usage ensures stability for everyone 🌍</p>
+<span>18. Communication</span>
+<p>We may send updates or alerts via email or Discord 📢
+You’re responsible for staying updated.
+</p>
+<span>19. Staff Abuse</span>
+<p>🚷 Zero-Tolerance Policy:
+Any form of threats, harassment, or disrespect toward SkilloraClouds staff results in immediate suspension or termination.
+</p>
+<span>20. Third-Party Service</span>
+<p>We rely on trusted tools like WHMCS, Pterodactyl, PayPal, and Stripe.
+We’re not responsible for outages caused by these providers. 🔗</p>
+<span>21. Modifications to Terms</span>
+<p>We may update Terms anytime.
+Important updates will be announced via Discord or email. 💌</p>
+<span>22. DMCA Policy</span>
+<p>We comply with the DMCA 📚 <br>
+
+Valid takedown requests → content removed immediately <br>
+
+Repeated violations = account termination 🚫</p>
+<span>23. VPS Reseller Policy</span>
+<p>Reselling VPS without permission is prohibited 🚫 <br>
+
+Apply through a support ticket to become an official reseller 🎟️</p>
+<span>24. IP Whitelisting & Management</span>
+<p>Manage IPs via your control panel 🔧 <br>
+
+Misuse (like blocking our infra) may cause suspension 🧱 <br>
+
+Dedicated IPs remain property of SkilloraClouds.</p>
+<span>25. Uptime Commitment</span>
+<p>We guarantee 99.5% uptime for paid plans. <br>
+
+Scheduled maintenance isn’t covered. <br>
+
+SLA credits apply upon request for eligible users.</p>
+<span>26. Dedicated IP Policy</span>
+<p>No spamming, SEO manipulation, or botnets 🚫 <br>
+
+Abuse may result in IP revocation without refund. <br>
+
+All IPs are owned by SkilloraClouds or partners.
+</p>
+<span>27. Affiliate Program</span>
+<p>All active clients can join 💼 <br>
+
+Earn commissions for valid paid signups 💸 <br>
+
+No self-referrals or fake accounts ❌ <br>
+
+Payouts monthly (min ₹500 or equivalent).</p>
+<span>28. Billing & Account Responsibility</span>
+<p>You’re responsible for checking invoices, renewals, and service status 🧭 <br>
+
+Missed payments = suspension or data loss 💣 <br>
+
+Ensure your email is active and monitored 📧 <br>
+
+SkilloraClouds isn’t liable for third-party mismanagement.</p>
+<span>Thank You for Choosing SkilloraClouds!</span>
+<p>We appreciate your trust and support 💫 <br>
+Let’s build something awesome together 🌐✨ <br>
+Need help? Open a support ticket or contact us on Discord 📩</p>
             </div>
-            <p>The refund request must be made within 72 hours from the date and time of purchase. The product or service must not have been fully used, downloaded, or accessed beyond a reasonable limit. You must provide proof of purchase (such as order ID or receipt).Once your request is received, our team will review it and process the refund if it meets the eligibility criteria. Refunds will be issued to the original payment method within 5–7 business days.</p>
-            <br />
-            <div class="legal_heading">
-                <span>Payment Rules</span>
-            </div>
-            <p>Pay first before we spin up your server.</p>
-            <p>Missed payment? You have 3 days before suspension.</p>
-            <br />
-            <div class="legal_heading">
-                <span>Support Squad</span>
-            </div>
-            <p>Reach us via Discord or WhatsApp for help.</p>
-            <p>Response time: 30 mins – 2 hours during working hours.</p>
-            <br />
-            <div class="legal_heading">
-                <span>No Resource Abuse</span>
-            </div>
-            <p>Don’t try to crash, lag, or break the server.</p>
-            <p>No crypto mining, botting, or sketchy scripts.</p>
-            <br />
-            <div class="legal_heading">
-                <span>Legal</span>
-            </div>
-            <p>By accessing and using our services, you agree to comply with all applicable laws and regulations. Our terms are designed to protect both our users and our platform, ensuring fair use, transparency, and accountability.</p>
-            <p>We reserve the right to update or modify our policies at any time, and continued use of our services implies acceptance of those changes. Users are responsible for maintaining the security of their accounts and must not engage in unlawful or abusive activity while using our services.</p>
-            <br />
-            <div class="legal_heading">
-                <span>Cookies</span>
-            </div>
-            <p>We use cookies to improve your browsing experience and to ensure our services work smoothly. Cookies help us remember your preferences, analyze traffic, and provide a more personalized experience.</p>
-            <p>By continuing to use our website, you agree to the use of cookies. You can manage or disable cookies in your browser settings at any time, but some features of the site may not function properly without them. <a href="terms-of-service.html"></a></p>
-            <br />
-            <div class="legal_heading">
-                <span>Security</span>
-            </div>
-            <p>We take security seriously and implement enterprise-grade measures to protect your data and services. From advanced encryption to continuous monitoring, our platform is built to ensure reliability and peace of mind.</p>
-            <ul>
-                <li>Data Protection</li>
-                <li>DDoS Mitigation</li>
-                <li>24/7 Monitoring</li>
-            </ul>
-        </div>
-    </div>
 
     <!-- Footer -->
     <footer class="py-5">
