Update refund policy and liability in terms of service
Clarified refund policy and liability statement.

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -309,6 +309,8 @@ Missed payments = suspension or data loss 💣 <br>
 
 Ensure your email is active and monitored 📧 <br>
 
+If Any Issues Can Occur Form Our Hositn You Will Refund But If Our Issues Has Working Perfectly Then No Refund !! 📧 <br>
+
 SkilloraClouds isn’t liable for third-party mismanagement.</p>
 <span>Thank You for Choosing SkilloraClouds!</span>
 <p>We appreciate your trust and support 💫 <br>
