--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -309,7 +309,7 @@ Missed payments = suspension or data loss 💣 <br>
 
 Ensure your email is active and monitored 📧 <br>
 
-If Any Issues Can Occur Form Our Hositng You Will Refund But If Our Issues Has Working Perfectly Then No Refund !! 📧 <br>
+If Any Issues Can Occur Form Our Hositng You Will Refund But If Our Service Has Working Perfectly Then No Refund !! 📧 <br>
 
 SkilloraClouds isn’t liable for third-party mismanagement.</p>
 			
