--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -203,7 +203,7 @@ Services are discontinued 🔄
 </p>
 <span>8. Refund Policy</span>
 <p>
-Refunds allowed within 24 hours of first payment ⏳ <br>
+No Refunds ⏳ <br>
 
 VPS refunds are non-refundable ⚠️ <br>
 
