--- a/vps-hosting.html
+++ b/vps-hosting.html
@@ -124,14 +124,22 @@
     </div>
 </nav>
     <!-- Header -->
-    <div class="header">
+    <div class="header header_game" style="background: url('assets/images/games_banner/minecraft.png');">
         <div class="container-fluid container-custom">
             <div class="text-center">
-                <h2 class="mb-2">Virtual Private Servers</h2>
-                <p>Full root access on high performance hardware, with game specialized DDoS protection included.</p>
+                <h2 class="mb-2">Minecraft Hosting</h2>
+                <p>Minecraft is a brutal exploration and survival game for 1-10 players set in a procedurally-generated world inspired by Norse mythology. Craft powerful weapons, construct longhouses, and slay mighty foes to prove yourself to Odin!</p>
+                <ul id="swicherMC" class="btn-swicher text-center nav nav-pills d-flex justify-content-center mt-4" data-bs-tabs="tabs">
+                    <li class="nav-item">
+                        <a href="minecraft.html#budget" class="nav-link show active" data-bs-toggle="tab">Budget Plan</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="minecraft.html#premium" class="nav-link" data-bs-toggle="tab">Premium Plan</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </div>
+    </div>>
 
     <!-- Game Plans -->
     <div class="game_plans py-5">
