--- a/vps-hosting.html
+++ b/vps-hosting.html
@@ -145,7 +145,7 @@
     <div class="game_plans py-5">
         <div class="container-fluid container-custom">
             <div class="site_title">
-                <h2>Our Minecraft Server Plans</h2>
+                <h2>Our VPS Plans</h2>
             </div>
             <div class="tab-content">
                 <!-- Budget Plans -->
@@ -155,14 +155,16 @@
                         <div class="col-md-4">
                             <div class="card mb-4">
                                 <div class="card-body">
-                                    <h2 class="mb-4">Dirt Plan</h2>
+                                    <h2 class="mb-4">Plan E – Basic</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>80₹ Per Month</span>
+                                        <span>500₹ Per Month</span>
                                     </div>
-                                    <h3 class="text-center mb-4">4GB</h3>
+                                    <h3 class="text-center mb-4">8GB</h3>
+									<h3 class="text-center mb-4">2 Core</h3>
+
                                     <div class="row mb-4">
                                         <div class="col-sm-6">
-                                            <p>10gb SSD Storage <span>NVMe</span></p>
+                                            <p>20gb SSD Storage <span>NVMe</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Fast Support <span>24 / 7</span></p>
