--- a/vps-hosting.html
+++ b/vps-hosting.html
@@ -160,9 +160,11 @@
                                         <span>500₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">8GB</h3>
-									<h3 class="text-center mb-4">2 Core</h3>
 
                                     <div class="row mb-4">
+                                        <div class="col-sm-6">
+                                            <p>2<span>Core</span></p>
+                                        </div>
                                         <div class="col-sm-6">
                                             <p>20gb SSD Storage <span>NVMe</span></p>
                                         </div>
@@ -186,14 +188,17 @@
                         <div class="col-md-4">
                             <div class="card mb-4">
                                 <div class="card-body">
-                                    <h2 class="mb-4">Coal Plan</h2>
+                                    <h2 class="mb-4">Plan D – Starter Pro</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>160₹ Per Month</span>
+                                        <span>16₹ Per Month</span>
                                     </div>
-                                    <h3 class="text-center mb-4">8GB</h3>
+                                    <h3 class="text-center mb-4">16GB</h3>
                                     <div class="row mb-4">
+										 <div class="col-sm-6">
+                                            <p>4 <span>Core</span></p>
+                                        </div>
                                         <div class="col-sm-6">
-                                            <p>20gb SSD Storage <span>NVMe</span></p>
+                                            <p>50gb SSD Storage <span>NVMe</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Fast Support <span>24 / 7</span></p>
@@ -215,14 +220,17 @@
                         <div class="col-md-4">
                             <div class="card mb-4">
                                 <div class="card-body">
-                                    <h2 class="mb-4">Redstone Plan</h2>
+                                    <h2 class="mb-4">Plan C – Pro Level</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>240₹ Per Month</span>
+                                        <span>1200₹ Per Month</span>
                                     </div>
-                                    <h3 class="text-center mb-4">10GB</h3>
+                                    <h3 class="text-center mb-4">32GB</h3>
                                     <div class="row mb-4">
+										<div class="col-sm-6">
+                                            <p>5 <span>Core</span></p>
+                                        </div>
                                         <div class="col-sm-6">
-                                            <p>25 SSD Storage <span>NVMe</span></p>
+                                            <p>100 SSD Storage <span>NVMe</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Fast Support <span>24 / 7</span></p>
@@ -244,14 +252,17 @@
                         <div class="col-md-4">
                             <div class="card mb-4">
                                 <div class="card-body">
-                                    <h2 class="mb-4">Gold</h2>
+                                    <h2 class="mb-4">Plan B – High Performance</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>320₹ Per Month</span>
+                                        <span>48₹ Per Month</span>
                                     </div>
-                                    <h3 class="text-center mb-4">12GB</h3>
+                                    <h3 class="text-center mb-4">48GB</h3>
                                     <div class="row mb-4">
+										<div class="col-sm-6">
+                                            <p>10 <span>Core</span></p>
+                                        </div>
                                         <div class="col-sm-6">
-                                            <p>30gb SSD Storage <span>NVMe</span></p>
+                                            <p>140gb SSD Storage <span>NVMe</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Fast Support <span>24 / 7</span></p>
@@ -273,14 +284,17 @@
                         <div class="col-md-4">
                             <div class="card mb-4">
                                 <div class="card-body">
-                                    <h2 class="mb-4">Diamond Plan</h2>
+                                    <h2 class="mb-4">Plan A – Ultra Power</h2>
                                     <div class="card-value mb-4 text-center">
-                                        <span>400₹ Per Month</span>
+                                        <span>1900₹ Per Month</span>
                                     </div>
                                     <h3 class="text-center mb-4">16GB</h3>
                                     <div class="row mb-4">
+										<div class="col-sm-6">
+                                            <p>12 <span>Core</span></p>
+                                        </div>
                                         <div class="col-sm-6">
-                                            <p>40gb SSD Storage <span>NVMe</span></p>
+                                            <p>200gb SSD Storage <span>NVMe</span></p>
                                         </div>
                                         <div class="col-sm-6">
                                             <p>Fast Support <span>24 / 7</span></p>
@@ -291,36 +305,10 @@
                                         <div class="col-sm-6">
                                             <p>Instant <span>Setup</span></p>
                                         </div>
-                                    </div>
-                                    <div class="text-center">
-                                        <a href="minecraft.html" class="btn">Order now</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <!-- Plans Six -->
-                        <div class="col-md-4">
-                            <div class="card mb-4">
-                                <div class="card-body">
-                                    <h2 class="mb-4">Netherite Plan</h2>
-                                    <div class="card-value mb-4 text-center">
-                                        <span>480₹ Per Month</span>
-                                    </div>
-                                    <h3 class="text-center mb-4">34GB</h3>
-                                    <div class="row mb-4">
-                                        <div class="col-sm-6">
-                                            <p>480 SSD Storage <span>NVMe</span></p>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <p>Fast Support <span>24 / 7</span></p>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <p>Processor <span>Intel Xeon Platinum</span></p>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <p>Instant <span>Setup</span></p>
-                                        </div>
-                                    </div>
                                     <div class="text-center">
                                         <a href="minecraft.html" class="btn">Order now</a>
                                     </div>
