--- a/vps-hosting.html
+++ b/vps-hosting.html
@@ -306,6 +306,9 @@
                                             <p>Instant <span>Setup</span></p>
                                         </div>
                                     </div>
+									<div class="text-center">
+                                        <a href="minecraft.html" class="btn">Order now</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
